# automation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  automation.service  compose.yml  deploy.sh  devices_cache.json  handlers.py  lights-scheduler.service  lights_off.py  morning_lights.py  night_lights.py  pyproject.toml  pyrightconfig.json  scheduler.py  schedules.py  server_setup.sh  voice_control.py
.devcontainer/: devcontainer.json
domains/lights/: controller.py  handler.py  kasa_onboarding_util.py  lights_controller.py  lights_handler.py  lights_repository.py  repository.py
domains/nextdns/: controller.py  handler.py  nextdns_controller.py  nextdns_handler.py  nextdns_repository.py  repository.py
domains/stocks/: controller.py  handler.py  stocks_controller.py  stocks_handler.py  stocks_repository.py
domains/system/: system_controller.py
domains/weather/: controller.py  handler.py  repository.py  weather_controller.py  weather_handler.py  weather_repository.py
tests/: test_lights_endpoint.py  test_lights_repository.py  test_nextdns_repository.py  test_stocks_endpoint.py  test_weather_endpoint.py
util/: devices.json  kasa_util.py  next_dns_util.py
